Change back to using --add-modules   * Some testing indicates that how Java behaves without --add-modules     is erratic when -p and -classpath options are combined.