@@ -1,3 +1,4 @@
 #!/bin/sh
-java -p BZDEV_DIR -classpath JARDIRECTORY/webnail-VERSION.jar \
+java -p BZDEV_DIR --add-modules org.bzdev.ejws,org.bzdev.desktop \
+     -classpath JARDIRECTORY/webnail-VERSION.jar \
      webnail/Webnail "$@"
